// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextInput: type Email renders disabled 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 hdhjuc"
      disabled={true}
    >
      <label
        className="Label-sc-1rdea5p-0 broZvL"
      >
        medium
      </label>
      <input
        className="Input-qkdgvx-0 bDJHX"
        disabled={true}
        placeholder=" "
        type="email"
        value="jake.weary@sportsbet.io"
      />
      <p
        className="HintText-sc-1e9hzxr-0 cRPHIa"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 hdhjuc"
      disabled={true}
    >
      <label
        className="Label-sc-1rdea5p-0 broZvL"
      >
        large
      </label>
      <input
        className="Input-qkdgvx-0 gpyBtE"
        disabled={true}
        placeholder=" "
        type="email"
        value="jake.weary@sportsbet.io"
      />
      <p
        className="HintText-sc-1e9hzxr-0 cRPHIa"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 hdhjuc"
      disabled={true}
    >
      <div
        className="Inner-sc-1soq84i-0 gXtJlV"
      >
        <input
          className="Input-qkdgvx-0 cpzYTK"
          disabled={true}
          placeholder=" "
          type="email"
          value="jake.weary@sportsbet.io"
        />
        <label
          className="LabelInner-vrrjt0-0 iEBjb"
        >
          xlarge
        </label>
      </div>
      <p
        className="HintText-sc-1e9hzxr-0 cRPHIa"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Email renders error 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 hokOxq"
    >
      <label
        className="Label-sc-1rdea5p-0 broZvL"
      >
        medium
      </label>
      <input
        className="Input-qkdgvx-0 kxUQuF"
        placeholder="e.g. jake.weary@sportsbet.io"
        type="email"
      />
      <p
        className="HintText-sc-1e9hzxr-0 kjnrjC"
        role="alert"
      >
        Error message
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 hokOxq"
    >
      <label
        className="Label-sc-1rdea5p-0 broZvL"
      >
        large
      </label>
      <input
        className="Input-qkdgvx-0 jFIPQy"
        placeholder="e.g. jake.weary@sportsbet.io"
        type="email"
      />
      <p
        className="HintText-sc-1e9hzxr-0 kjnrjC"
        role="alert"
      >
        Error message
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 hokOxq"
    >
      <div
        className="Inner-sc-1soq84i-0 gXtJlV"
      >
        <input
          className="Input-qkdgvx-0 jyxa-Do"
          placeholder="e.g. jake.weary@sportsbet.io"
          type="email"
        />
        <label
          className="LabelInner-vrrjt0-0 iEBjb"
        >
          xlarge
        </label>
      </div>
      <p
        className="HintText-sc-1e9hzxr-0 kjnrjC"
        role="alert"
      >
        Error message
      </p>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Email renders readOnly 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 hokOxq"
    >
      <label
        className="Label-sc-1rdea5p-0 broZvL"
      >
        medium
      </label>
      <input
        className="Input-qkdgvx-0 bDJHX"
        placeholder=" "
        readOnly={true}
        type="email"
        value="jake.weary@sportsbet.io"
      />
      <p
        className="HintText-sc-1e9hzxr-0 cRPHIa"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 hokOxq"
    >
      <label
        className="Label-sc-1rdea5p-0 broZvL"
      >
        large
      </label>
      <input
        className="Input-qkdgvx-0 gpyBtE"
        placeholder=" "
        readOnly={true}
        type="email"
        value="jake.weary@sportsbet.io"
      />
      <p
        className="HintText-sc-1e9hzxr-0 cRPHIa"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 hokOxq"
    >
      <div
        className="Inner-sc-1soq84i-0 gXtJlV"
      >
        <input
          className="Input-qkdgvx-0 cpzYTK"
          placeholder=" "
          readOnly={true}
          type="email"
          value="jake.weary@sportsbet.io"
        />
        <label
          className="LabelInner-vrrjt0-0 iEBjb"
        >
          xlarge
        </label>
      </div>
      <p
        className="HintText-sc-1e9hzxr-0 cRPHIa"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Email renders with hint 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 hokOxq"
    >
      <label
        className="Label-sc-1rdea5p-0 broZvL"
      >
        medium
      </label>
      <input
        className="Input-qkdgvx-0 bDJHX"
        placeholder="e.g. jake.weary@sportsbet.io"
        type="email"
      />
      <p
        className="HintText-sc-1e9hzxr-0 cRPHIa"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 hokOxq"
    >
      <label
        className="Label-sc-1rdea5p-0 broZvL"
      >
        large
      </label>
      <input
        className="Input-qkdgvx-0 gpyBtE"
        placeholder="e.g. jake.weary@sportsbet.io"
        type="email"
      />
      <p
        className="HintText-sc-1e9hzxr-0 cRPHIa"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 hokOxq"
    >
      <div
        className="Inner-sc-1soq84i-0 gXtJlV"
      >
        <input
          className="Input-qkdgvx-0 cpzYTK"
          placeholder="e.g. jake.weary@sportsbet.io"
          type="email"
        />
        <label
          className="LabelInner-vrrjt0-0 iEBjb"
        >
          xlarge
        </label>
      </div>
      <p
        className="HintText-sc-1e9hzxr-0 cRPHIa"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Email renders with label 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 hokOxq"
    >
      <label
        className="Label-sc-1rdea5p-0 broZvL"
      >
        medium
      </label>
      <input
        className="Input-qkdgvx-0 bDJHX"
        placeholder="e.g. jake.weary@sportsbet.io"
        type="email"
      />
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 hokOxq"
    >
      <label
        className="Label-sc-1rdea5p-0 broZvL"
      >
        large
      </label>
      <input
        className="Input-qkdgvx-0 gpyBtE"
        placeholder="e.g. jake.weary@sportsbet.io"
        type="email"
      />
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 hokOxq"
    >
      <div
        className="Inner-sc-1soq84i-0 gXtJlV"
      >
        <input
          className="Input-qkdgvx-0 cpzYTK"
          placeholder="e.g. jake.weary@sportsbet.io"
          type="email"
        />
        <label
          className="LabelInner-vrrjt0-0 iEBjb"
        >
          xlarge
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Email renders with label RTL 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 hokOxq"
    >
      <label
        className="Label-sc-1rdea5p-0 broZvL"
        dir="rtl"
      >
        medium
      </label>
      <input
        className="Input-qkdgvx-0 bDJHX"
        dir="rtl"
        placeholder="e.g. jake.weary@sportsbet.io"
        type="email"
      />
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 hokOxq"
    >
      <label
        className="Label-sc-1rdea5p-0 broZvL"
        dir="rtl"
      >
        large
      </label>
      <input
        className="Input-qkdgvx-0 gpyBtE"
        dir="rtl"
        placeholder="e.g. jake.weary@sportsbet.io"
        type="email"
      />
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 hokOxq"
    >
      <div
        className="Inner-sc-1soq84i-0 gXtJlV"
      >
        <input
          className="Input-qkdgvx-0 cpzYTK"
          dir="rtl"
          placeholder="e.g. jake.weary@sportsbet.io"
          type="email"
        />
        <label
          className="LabelInner-vrrjt0-0 crzJMw"
        >
          xlarge
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Email renders without label 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 hokOxq"
    >
      <input
        className="Input-qkdgvx-0 bDJHX"
        placeholder="medium"
        type="email"
      />
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 hokOxq"
    >
      <input
        className="Input-qkdgvx-0 gpyBtE"
        placeholder="large"
        type="email"
      />
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 hokOxq"
    >
      <div
        className="Inner-sc-1soq84i-0 gXtJlV"
      >
        <input
          className="Input-qkdgvx-0 eCtITT"
          placeholder="xlarge"
          type="email"
        />
        <label
          className="LabelInner-vrrjt0-0 iEBjb"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Email supports background colour 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 hokOxq"
    >
      <label
        className="Label-sc-1rdea5p-0 broZvL"
      >
        medium
      </label>
      <input
        className="Input-qkdgvx-0 cCgyHs"
        placeholder="e.g. jake.weary@sportsbet.io"
        type="email"
      />
      <p
        className="HintText-sc-1e9hzxr-0 cRPHIa"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 hokOxq"
    >
      <label
        className="Label-sc-1rdea5p-0 broZvL"
      >
        large
      </label>
      <input
        className="Input-qkdgvx-0 eJuRND"
        placeholder="e.g. jake.weary@sportsbet.io"
        type="email"
      />
      <p
        className="HintText-sc-1e9hzxr-0 cRPHIa"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 hokOxq"
    >
      <div
        className="Inner-sc-1soq84i-0 fqEbYq"
      >
        <input
          className="Input-qkdgvx-0 cpzYTK"
          placeholder="e.g. jake.weary@sportsbet.io"
          type="email"
        />
        <label
          className="LabelInner-vrrjt0-0 iEBjb"
        >
          xlarge
        </label>
      </div>
      <p
        className="HintText-sc-1e9hzxr-0 cRPHIa"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
</div>
`;
